--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -295,6 +295,7 @@
                     android:background="@drawable/google_icon" />
 
                 <ImageView
+                    android:id="@+id/img_twitter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
@@ -304,6 +305,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
+                    android:visibility="gone"
                     android:background="@drawable/mobile_icon" />
 
             </LinearLayout>
