--- a/app/src/main/res/layout/activity_notificaionvideoview.xml
+++ b/app/src/main/res/layout/activity_notificaionvideoview.xml
@@ -28,8 +28,9 @@
             android:layout_marginRight="40dp"
             android:gravity="center">
 
-            <!--<io.vov.vitamio.widget.VideoView-->
-                <!--android:id="@+id/surface_view"-->
+
+            <!--<android.opengl.GLSurfaceView-->
+                <!--android:id="@+id/video_view"-->
                 <!--android:layout_width="match_parent"-->
                 <!--android:layout_height="match_parent" />-->
 
