--- a/app/src/main/res/layout/activity_notificaionvideoview.xml
+++ b/app/src/main/res/layout/activity_notificaionvideoview.xml
@@ -4,14 +4,41 @@
 
     android:background="@drawable/background_image">
 
-    <ImageView
-        android:id="@+id/to_view"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:visibility="invisible"
-        android:background="@drawable/top_iamge" />
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="09.00 AM"
+            android:textColor="@color/white"
+            android:textSize="33sp"
+            android:textStyle="normal" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2007-01-30 Monday"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="normal" />
+
+    </LinearLayout>
+
+
+    <!--<ImageView-->
+    <!--android:id="@+id/to_view"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_marginTop="20dp"-->
+    <!--android:visibility="visible"-->
+    <!--android:background="@drawable/top_iamge" />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
