upload latest aaa

--- a/app/src/main/res/layout/activity_fullsrceen_imageview.xml
+++ b/app/src/main/res/layout/activity_fullsrceen_imageview.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -39,16 +38,12 @@
     </RelativeLayout>
 
 
-    <tm.headsup.utils.TouchImageView
-        android:layout_below="@+id/header"
+    <com.headsupseven.corp.utils.TouchImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/header" />
 
-    <!--<ImageView-->
-    <!--android:id="@+id/image_view"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent" />-->
 
 
     <ProgressBar
