--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -69,6 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginTop="15dp"
+            android:visibility="gone"
             android:background="@color/bg_color">
 
 
@@ -201,6 +202,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/vote_now"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
