--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -52,6 +52,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/active_jon"
         android:layout_below="@+id/top_view">
 
         <android.support.v7.widget.RecyclerView
