--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Notification"
+            android:text="Notifications"
             android:textColor="@color/robin_egg_blue"
             android:textSize="18sp"
             android:textStyle="normal" />
