--- a/app/src/main/res/layout/header_profile.xml
+++ b/app/src/main/res/layout/header_profile.xml
@@ -155,7 +155,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="Followers"
+                        android:text="Follower"
                         android:textColor="@color/ash_ash"
                         android:textSize="12sp" />
 
