--- a/app/src/main/res/layout/activity_notificaionvideoview.xml
+++ b/app/src/main/res/layout/activity_notificaionvideoview.xml
@@ -43,12 +43,19 @@
             android:layout_marginTop="30dp"
             android:background="#00000000"
             android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/imgCharging"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/charging"
+                android:layout_marginRight="5dp"
+                android:layout_gravity="center_vertical"/>
 
             <ProgressBar
                 android:id="@+id/progressBar1"
                 style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="70dp"
-                android:layout_height="40dp"
+                android:layout_width="60dp"
+                android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:progressDrawable="@drawable/greenprogress" />
 
