--- a/app/src/main/res/layout/activity_live_video_player_new.xml
+++ b/app/src/main/res/layout/activity_live_video_player_new.xml
@@ -4,6 +4,24 @@
     android:layout_height="match_parent"
     android:background="@color/black">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true">
+
+        <android.opengl.GLSurfaceView
+            android:id="@+id/video_view"
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true" />
+
+
+    </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/top_view"
         android:layout_width="match_parent"
@@ -43,23 +61,6 @@
     </RelativeLayout>
 
     <!--- playvideo-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_below="@+id/top_view"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_view">
-
-        <android.opengl.GLSurfaceView
-            android:id="@+id/video_view"
-
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" />
-
-
-    </LinearLayout>
 
     <!-- Loader-->
     <LinearLayout
@@ -92,7 +93,8 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/video_play_paush"
