--- a/app/src/main/res/layout/activity_live_video_player_new.xml
+++ b/app/src/main/res/layout/activity_live_video_player_new.xml
@@ -25,12 +25,15 @@
     <RelativeLayout
         android:id="@+id/top_view"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize">
+        android:layout_height="?actionBarSize"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/back_player"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
@@ -38,19 +41,20 @@
 
         <ImageView
             android:id="@+id/view_360"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_width="54dp"
+            android:layout_height="24dp"
+            android:layout_alignTop="@+id/view_vr"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
             android:layout_toLeftOf="@+id/view_vr"
+            android:layout_toStartOf="@+id/view_vr"
             android:background="@drawable/btn_360" />
 
 
         <ImageView
             android:id="@+id/view_vr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="24dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
@@ -71,11 +75,11 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/loader_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/loading" />
+        <ProgressBar
+            android:id="@+id/progressBar3"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -98,12 +102,15 @@
 
         <ImageView
             android:id="@+id/video_play_paush"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
 
             android:layout_marginLeft="15dp"
-            android:src="@drawable/video_play" />
+            android:src="@drawable/video_play"
+            android:layout_alignTop="@+id/seek_video"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="15dp" />
 
 
         <SeekBar
