--- a/app/src/main/res/layout/activity_notificaionvideoview.xml
+++ b/app/src/main/res/layout/activity_notificaionvideoview.xml
@@ -100,6 +100,12 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop" />
 
+            <ImageView
+                android:id="@+id/row_video_icon"
+                android:layout_width="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/play"
+                android:layout_height="wrap_content" />
             <LinearLayout
                 android:id="@+id/li_clickView"
                 android:orientation="vertical"
