--- a/app/src/main/res/layout/row_headsup.xml
+++ b/app/src/main/res/layout/row_headsup.xml
@@ -96,7 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:background="@drawable/ic_play"
+            android:src="@drawable/ic_play"
             android:visibility="gone" />
 
         <ImageView
