--- a/app/src/main/res/layout/activity_notificaionvideoview.xml
+++ b/app/src/main/res/layout/activity_notificaionvideoview.xml
@@ -43,13 +43,14 @@
             android:layout_marginTop="30dp"
             android:background="#00000000"
             android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/imgCharging"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/charging"
+                android:layout_gravity="center_vertical"
                 android:layout_marginRight="5dp"
-                android:layout_gravity="center_vertical"/>
+                android:src="@drawable/charging" />
 
             <ProgressBar
                 android:id="@+id/progressBar1"
@@ -89,10 +90,25 @@
             android:layout_marginRight="20dp"
             android:gravity="center">
 
-            <com.headsupseven.corp.customview.VideoView
-                android:id="@+id/video_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+            <!--<com.headsupseven.corp.customview.VideoView-->
+            <!--android:id="@+id/video_view"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:visibility="gone" />-->
+
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <com.headsupseven.corp.media.IjkVideoView
+                    android:id="@+id/video_view_IjkVideoView"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:layout_gravity="center">
+
+                </com.headsupseven.corp.media.IjkVideoView>
+            </RelativeLayout>
+
 
             <ImageView
                 android:id="@+id/image_view"
@@ -103,14 +119,15 @@
             <ImageView
                 android:id="@+id/row_video_icon"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:src="@drawable/play"
-                android:layout_height="wrap_content" />
+                android:src="@drawable/play" />
+
             <LinearLayout
                 android:id="@+id/li_clickView"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
             </LinearLayout>
         </RelativeLayout>
