--- a/app/src/main/res/layout/activity_notificaionvideoview.xml
+++ b/app/src/main/res/layout/activity_notificaionvideoview.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/lockscreennew">
+    android:background="@drawable/locklast">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -37,10 +37,11 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="30dp"
             android:layout_marginTop="30dp"
+            android:gravity="center_vertical"
             android:background="#00000000"
             android:orientation="horizontal">
 
@@ -48,7 +49,6 @@
                 android:id="@+id/imgCharging"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:layout_gravity="center_vertical"
                 android:layout_marginRight="5dp"
                 android:src="@drawable/charging" />
 
@@ -57,14 +57,12 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="25dp"
                 android:layout_height="10dp"
-                android:layout_gravity="center"
                 android:progressDrawable="@drawable/greenprogress" />
 
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
                 android:text="5%"
                 android:textColor="@color/white"
