--- a/app/src/main/res/layout/activity_live_video.xml
+++ b/app/src/main/res/layout/activity_live_video.xml
@@ -80,10 +80,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:orientation="vertical"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -136,8 +136,7 @@
             android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            ></ListView>
+            android:layout_margin="10dp"></ListView>
 
     </LinearLayout>
 
