--- a/app/src/main/res/layout/activity_live_video_player_new.xml
+++ b/app/src/main/res/layout/activity_live_video_player_new.xml
@@ -53,9 +53,8 @@
         android:id="@+id/rl_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_above="@+id/portait_full_mood"
+        android:layout_below="@+id/top_view">
 
         <android.opengl.GLSurfaceView
             android:id="@+id/video_view"
@@ -108,8 +107,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignTop="@+id/seek_video"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:src="@drawable/video_play" />
 
 
@@ -118,9 +117,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="48dp"
-                android:layout_toEndOf="@+id/video_play_paush"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/image_ic_full_video"
                 android:layout_toRightOf="@+id/video_play_paush"
                 android:max="100"
@@ -158,7 +156,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/ic_full_video" />
 
