implement API forget pass

--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -9,7 +9,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/li_back"
@@ -49,6 +52,7 @@
             android:background="#127D7C">
 
             <EditText
+                android:id="@+id/txtUserName"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
@@ -64,6 +68,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/b_submit"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="50dp"
@@ -76,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:text="Find Account"
+                android:text="Recover Password"
                 android:textColorHint="#D1D7D7"
                 android:textSize="14sp"
                 android:textStyle="normal" />
